Adicionado modal de confirmação de envio

--- a/frontend-angular/src/app/app.component.html
+++ b/frontend-angular/src/app/app.component.html
@@ -140,4 +140,10 @@
   </div>
   <br>
   <br>
+
+  <thf-modal #formModal
+    t-title="Dados enviados com sucesso!"
+    [t-primary-action]="modalPrimaryAction">
+  </thf-modal>  
+
 </div>
